tests/ui/macros/macro-hygiene-help-issue-149604.stderr
error[E0425]: cannot find value `it` in this scope
  --> $DIR/macro-hygiene-help-issue-149604.rs:7:14
   |
LL |     let () = it;
   |              ^^ not found in this scope
   |
help: an identifier with the same name is defined here, but is not accessible due to macro hygiene
  --> $DIR/macro-hygiene-help-issue-149604.rs:1:35
   |
LL | macro_rules! let_it { {} => { let it = (); } }
   |                                   ^^
...
LL |     let_it!();
   |     --------- in this macro invocation
   = note: this error originates in the macro `let_it` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find value `it` in this scope
  --> $DIR/macro-hygiene-help-issue-149604.rs:2:50
   |
LL | macro_rules! print_it { {} => { println!("{:?}", it); } }
   |                                                  ^^ not found in this scope
...
LL |     print_it!();
   |     ----------- in this macro invocation
   |
help: an identifier with the same name is defined here, but is not accessible due to macro hygiene
  --> $DIR/macro-hygiene-help-issue-149604.rs:1:35
   |
LL | macro_rules! let_it { {} => { let it = (); } }
   |                                   ^^
...
LL |     let_it!();
   |     --------- in this macro invocation
   = note: this error originates in the macro `print_it` which comes from the expansion of the macro `let_it` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
